--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,16 +16,14 @@
         <activity
             android:name=".ui.home.HomeActivity"
             android:screenOrientation="portrait"
-            android:exported="true"/>
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".ui.login.LoginActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.ApiCartoes"
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ui.splash.SplashScreenActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.ApiCartoes"
             android:windowSoftInputMode="adjustPan" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
